Removed reCaptcha Key

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
                     <br />
                     <center>
-                        <div class="g-recaptcha" data-sitekey="6LfdkU8UAAAAAFMz9O8vVo23O_bGY-esjGr3SRkC"></div>
+                        <div class="g-recaptcha" data-sitekey=""></div>
                     </center>
 
                     <input type="submit" value="SUBMIT" id="submitBtn" class="submitBtn" name="submit">
