--- a/index.html
+++ b/index.html
@@ -15,32 +15,26 @@
     <link href="animate.css" rel="stylesheet" type="text/css" />
     <!-- HEADER ANIMATIONS -->
     <!-- JAVASCRIPTS -->
-	<script type="text/javascript" src="js/jquery-1.12.4.js"></script>
-	<script type="text/javascript" src="js/jquery-migrate-1.2.1.js"></script>
-	<script type="text/javascript" src="js/jquery.cycle2.js"></script> <!-- FADE GALLERY -->
-	<script type="text/javascript" src="js/jquery.form.js"></script> <!-- FORM AJAX SUBMIT -->
-
-	<!-- IDANGEROUS SWIPER VERSION 4-->
-	<script src="js/swiper.js" type="text/javascript"></script>
-	<link href="js/swiper.css" rel="stylesheet" type="text/css">
-
+    <script type="text/javascript" src="js/jquery-1.12.4.js"></script>
+    <script type="text/javascript" src="js/jquery-migrate-1.2.1.js"></script>
+    <script type="text/javascript" src="js/jquery.cycle2.js"></script> <!-- FADE GALLERY -->
+    <script type="text/javascript" src="js/jquery.form.js"></script> <!-- FORM AJAX SUBMIT -->
+    <!-- IDANGEROUS SWIPER VERSION 4-->
+    <script src="js/swiper.js" type="text/javascript"></script>
+    <link href="js/swiper.css" rel="stylesheet" type="text/css">
     <!-- FANCY BOX VERSION 3 -->
-	<script src="js/fancybox/dist/jquery.fancybox.js" type="text/javascript"></script>
-	<link href="js/fancybox/dist/jquery.fancybox.css" rel="stylesheet" type="text/css">
-
-	<!-- DATE PICKER & TOOLTIP -->
-	<script type="text/javascript" src="js/jquery-ui.js"></script>
-	<link href="js/jquery-ui.css" rel="stylesheet" type="text/css">
-
-  <!-- GREENSOCK -->
+    <script src="js/fancybox/dist/jquery.fancybox.js" type="text/javascript"></script>
+    <link href="js/fancybox/dist/jquery.fancybox.css" rel="stylesheet" type="text/css">
+    <!-- DATE PICKER & TOOLTIP -->
+    <script type="text/javascript" src="js/jquery-ui.js"></script>
+    <link href="js/jquery-ui.css" rel="stylesheet" type="text/css">
+    <!-- GREENSOCK -->
     <script src="js/gsap/TweenMax.min.js"></script>
-
     <!-- SCROLL MAGIC -->
     <script src="js/ScrollMagic/ScrollMagic.js"></script>
     <script src="js/ScrollMagic/animation.gsap.js"></script>
     <script src="js/ScrollMagic/debug.addIndicators.js"></script>
-
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMUwH-HxWA_Yrc7XtjisiPzCl8XtRgZ2M" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMUwH-HxWA_Yrc7XtjisiPzCl8XtRgZ2M" async defer></script>
     <!-- Vue.js Production Version - Optimized for Speed -->
     <script src="script3.js"></script>
     <!-- RECAPTCHA -->
@@ -48,62 +42,46 @@
 </head>
 
 <body>
-
     <script>
         // init controller
         var controller = new ScrollMagic.Controller();
     </script>
-
     <!-- START OF THE ENTIRE CONTAINER -->
     <section id="vue__main__container" class="rel">
-
         <!-- CONTAINER 1 SECTION -->
         <div id="container__1" class="">
             <a href="#">
-	      <img src="images/Vue-Logo-1.png" id="vue__logo" class="animate fadeInLeft one">
-	    </a>
+                <img src="images/Vue-Logo-1.png" id="vue__logo" class="animate fadeInLeft one">
+            </a>
             <div id="vip__signup_box" class="animate3 fadeInDown three">
                 <a href="javascript:scrollToContact();" id="vip__signup" class="flexCenter">VIP SIGN-UP</a>
             </div>
             <div id="h1Container" class="animate fadeInUp two">
-                <h1>BRAND NEW <br /> MODERN INDUSTRIAL <br /> APARTMENT HOMES <hr /> FALL 2018</h1>
+                <h1>BRAND NEW <br /> MODERN INDUSTRIAL <br /> APARTMENT HOMES
+                    <hr /> FALL 2018</h1>
             </div>
     </section>
     <!-- END CONTAINER 1 SECTION -->
-
-
-
-
     <!-- CONTAINER 2 SECTION -->
     <section id="container__2" class="rel flexCenter">
         <img src="images/vue-1.png" alt="Vue at The Quarter Icons" id="vue__icons">
     </section>
     <!-- END CONTAINER 2 SECTION -->
-
-
     <!-- GOOGLE MAPS -->
     <div id="googleMaps" class="rel"></div>
     <!-- NOTE: THE MAP GETS INITIALIZE AT THE END OF THE API LINK @ lback=initMap-->
-
-
     <!-- CONTAINER 4 SECTION -->
     <section id="tweenContainer4">
         <div id="container__4" class="rel">
             <div id="background4"></div>
             <div id="h2Container">
-                <h2>WEST <br /> OF <br> MIDTOWN <br /> <hr /> SOUTH <br /> OF <br /> BUCKHEAD</h2>
+                <h2>WEST <br /> OF <br> MIDTOWN <br />
+                    <hr /> SOUTH <br /> OF <br /> BUCKHEAD</h2>
             </div>
             <div id="sceneH3"><img src="images/vue-at-the-quarter-icon.png" alt="Vue at The Quarter Icon" class="rel" id="vueQuarterIcon"></div>
         </div>
     </section>
     <!-- END CONTAINER 4 SECTION -->
-
-
-
-
-
-
-
     <!-- GALLERY SECTION -->
     <section id="container__5" class="rel">
         <div id="gallery">
@@ -123,7 +101,6 @@
                     <img src="images/TopGolf.jpg" id="manImage" alt="Vue at the TR" />
                     <!-- OBJECT TO MOVE -->
                 </div>
-
                 <div class="rel">
                     <div id="upsContainer">
                         <div id="dogTrigger" class="rel">
@@ -131,7 +108,6 @@
                             <img src="images/WhittierMillPark.jpg" alt="Vue at the TR" id="dogImage" />
                             <!-- OBJECT TO MOVE -->
                         </div>
-
                         <div id="uwsTrigger" class="rel">
                             <!-- TRIGGER -->
                             <div id="upperWestside">
@@ -142,7 +118,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div id="galContent2" class="galContents">
                         <!-- TRIGGER -->
                         <div id="galContent2Object" class="rel">
@@ -154,14 +129,12 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="rel">
                     <div id="theGroup">
                         <!-- TRIGGER -->
                         <img src="images/ScofflawBrewingCo.jpg" id="theGroup1" alt="Vue at the TR" />
                         <!-- OBJECT TO MOVE -->
                     </div>
-
                     <div id="atlText">
                         <!-- TRIGGER -->
                         <div id="atlObject">
@@ -170,7 +143,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div id="galContent3" class="galContents">
                     <div id="galContent3Object" class="rel">
                         <!-- TRIGGER -->
@@ -185,13 +157,6 @@
         </div>
     </section>
     <!-- END GALLERY SECTION -->
-
-
-
-
-
-
-
     <!-- CONTACT SECTION -->
     <section id="contactSection">
         <div id="contactForm" class="rel">
@@ -199,40 +164,26 @@
                 <div id="vipList">VIP LIST</div>
                 <form name="form" method="POST" action="/?thankyou=true" onsubmit="return onSubmit();">
                     <input id="name" name="name" type="text" maxlength="30" value="NAME*" onfocus="if(this.value=='NAME*') this.value='';" onblur="if(this.value=='') this.value='NAME*';">
-
                     <input id="email" name="email" type="text" maxlength="60" value="EMAIL*" onblur="if(this.value=='') this.value='EMAIL*';" onfocus="if(this.value=='EMAIL*') this.value='';">
-
                     <input id="phone" name="phone" type="text" maxlength="15" value="PHONE*" onfocus="if(this.value=='PHONE*') this.value='';" onblur="if(this.value=='') this.value='PHONE*';">
-
                     <select id="interested" name="interested">
-												 <option value="studio">Studio</option>
-												 <option value="one bedroom">One Bedroom</option>
-												 <option value="two bedroom">Two Bedroom</option>
-												 <option value="three bedroom">Three Bedroom</option>
-											 </select>
-
+                        <option value="studio">Studio</option>
+                        <option value="one bedroom">One Bedroom</option>
+                        <option value="two bedroom">Two Bedroom</option>
+                        <option value="three bedroom">Three Bedroom</option>
+                    </select>
                     <input id="date" name="date" type="text" maxlength="20" value="MOVE-IN DATE" onfocus="if(this.value=='MOVE-IN DATE') this.value='';" onblur="if(this.value=='') this.value='MOVE-IN DATE';">
-
                     <textarea id="message" name="message" rows="3" maxlength="600" spellcheck="true" onfocus="if(this.value=='MESSAGE') this.value='';" onblur="if(this.value=='') this.value='MESSAGE';">MESSAGE</textarea>
-
                     <br />
                     <center>
                         <div class="g-recaptcha" data-sitekey=""></div>
                     </center>
-
                     <input type="submit" value="SUBMIT" id="submitBtn" class="submitBtn" name="submit">
                 </form>
             </div>
         </div>
     </section>
     <!-- END CONTACT SECTION -->
-
-
-
-
-
-
-
     <!-- START OF FOOTER -->
     <section id="vue__footer" class="rel">
         <div id="footerLogo">
@@ -241,11 +192,11 @@
         <div id="wrapper__1">
             <div id="awesomeSocialMediaIcons">
                 <a href="javascript:coming()">
-					<img src="images/facebook-icon.png" alt="Vue at The Quarter Facebook Icon">
-				</a>
+                    <img src="images/facebook-icon.png" alt="Vue at The Quarter Facebook Icon">
+                </a>
                 <a href="javascript:coming()">
-					<img src="images/instagram-icon.png" alt="Vue at The Quarter Instagram Icon">
-				</a>
+                    <img src="images/instagram-icon.png" alt="Vue at The Quarter Instagram Icon">
+                </a>
             </div>
             <div id="quarter__1">
                 <p class="vue__at__the__quarter"> &copy; 2018 Vue at the Quarter</p>
@@ -261,10 +212,8 @@
         </div>
     </section>
     <!-- END OF FOOTER -->
-
     </div>
     <!-- END OF THE ENTIRE CONTAINER -->
-
     <!-- PRIVACY POLICY -->
     <div id="privacyPolicy" style="display:none">
         <h2>{{privacyPolicy}}</h2>
@@ -279,8 +228,6 @@
         <h2>{{changesToPrivacyPolicy}}</h2>
         <p>{{policyChanges}}</p>
     </div>
-
-
     <script src="script.js"></script>
     <script src="script2.js"></script>
 </body>
