--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
     <script src="js/ScrollMagic/ScrollMagic.js"></script>
     <script src="js/ScrollMagic/animation.gsap.js"></script>
     <script src="js/ScrollMagic/debug.addIndicators.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMUwH-HxWA_Yrc7XtjisiPzCl8XtRgZ2M" async defer></script>
-    <!-- Vue.js Production Version - Optimized for Speed -->
-    <script src="script3.js"></script>
-    <!-- RECAPTCHA -->
-    <script src='https://www.google.com/recaptcha/api.js'></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 
 <body>
@@ -67,9 +63,6 @@
         <img src="images/vue-1.png" alt="Vue at The Quarter Icons" id="vue__icons">
     </section>
     <!-- END CONTAINER 2 SECTION -->
-    <!-- GOOGLE MAPS -->
-    <div id="googleMaps" class="rel"></div>
-    <!-- NOTE: THE MAP GETS INITIALIZE AT THE END OF THE API LINK @ lback=initMap-->
     <!-- CONTAINER 4 SECTION -->
     <section id="tweenContainer4">
         <div id="container__4" class="rel">
